--- a/package.json
+++ b/package.json
@@ -14,18 +14,25 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "date-fns": "^2.29.1",
     "expo": "~45.0.0",
+    "expo-file-system": "~14.0.0",
     "expo-image-picker": "~13.1.1",
+    "expo-media-library": "~14.1.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
+    "native-base": "^3.4.25",
     "react": "17.0.2",
     "react-color-log": "^1.0.12",
     "react-dom": "17.0.2",
     "react-moment": "^1.1.2",
     "react-native": "0.68.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-charts-wrapper": "^0.5.11",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-image-picker": "^4.8.5",
@@ -36,13 +43,12 @@
     "react-native-screens": "~3.11.1",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "expo-file-system": "~14.0.0",
-    "expo-media-library": "~14.1.0"
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
